# rusty-pingponger

./: .env.example  Cargo.toml  PingPongContract.json  README.md
src/: main.rs
